force-app/main/default/objects/Audio_System__c/Audio_System__c.object-meta.xml
<CustomObject>
    <label>Audio System</label>
    <nameField>
        <label>Audio System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audio Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>