force-app/main/default/objects/Audio_System__c/fields/Sonic_Cons__c.field-meta.xml
<CustomField>
    <fullName>Sonic_Cons__c</fullName>
    <label>Sonic Cons</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>