force-app/main/default/objects/Audio_System__c/fields/Sonic_Description__c.field-meta.xml
<CustomField>
    <fullName>Sonic_Description__c</fullName>
    <label>Sonic Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>