force-app/main/default/objects/Audio_System__c/fields/Sonic_Pros__c.field-meta.xml
<CustomField>
    <fullName>Sonic_Pros__c</fullName>
    <label>Sonic Pros</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>