force-app/main/default/objects/Audio_System__c/fields/System_Notes__c.field-meta.xml
<CustomField>
    <fullName>System_Notes__c</fullName>
    <label>System Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>