force-app/main/default/objects/Audio_System__c/fields/Version_Notes__c.field-meta.xml
<CustomField>
    <fullName>Version_Notes__c</fullName>
    <label>Version Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>