force-app/main/default/objects/Audio_System__c/fields/Version_Of__c.field-meta.xml
<CustomField>
    <fullName>Version_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Version Of</label>
    <referenceTo>Audio_System__c</referenceTo>
    <relationshipLabel>Spawned Versions</relationshipLabel>
    <relationshipName>Spawned_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>